--- a/app/src/main/res/drawable/list_selector.xml
+++ b/app/src/main/res/drawable/list_selector.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
-        android:state_selected="false"
         android:state_pressed="false"
+        android:state_selected="false"
         android:drawable="@drawable/view_bg" />
+    <item
+        android:state_long_pressable="true"
+        android:drawable="@drawable/long_press_bg" />
 </selector>
