--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -9,7 +9,9 @@
     <ImageView
         android:id="@+id/rubiks_cube"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="50dp"
+        android:src="@drawable/rubik_cube"
+        android:layout_alignRight="@+id/textView"/>
 
     <TextView
         android:id="@+id/textView"
