--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,14 +15,15 @@
         android:layout_height="wrap_content"
         android:hint="@string/todo_item"
         android:layout_marginTop="5dp"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:typeface="serif"/>
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/add_task"
-        android:background="@drawable/list_selector">
+        android:textAlignment="center">
     </ListView>
 
 </RelativeLayout>
