--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,19 +7,24 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.aaron.todolist.MainActivityFragment"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:id="@+id/main_fragment">
 
-    <Button
-        android:id="@+id/addTaskToList_button"
+    <EditText
+        android:id="@+id/add_task"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/todo_item"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent"
+        android:typeface="serif"/>
+
+    <ListView
+        android:id="@+id/list_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addTask_string"
-        android:background="@color/colorPrimaryDark"
-        android:textStyle="bold"
-        android:textColor="@color/buttonTextColor"
-        android:typeface="serif"
-        android:layout_marginTop="174dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/add_task"
+        android:textAlignment="center">
+    </ListView>
 
 </RelativeLayout>
