--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,7 +6,7 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never"/>
     <item
         android:id="@+id/action_addTask"
         android:icon="@drawable/ic_add_white_24dp"
@@ -17,4 +17,11 @@
         android:icon="@drawable/ic_update_white_24dp"
         android:title="@string/updateitem_sign"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_deleteTask"
+        android:icon="@drawable/ic_delete_white_24dp"
+        android:title="@string/deleteitem_sign"
+        app:showAsAction="collapseActionView" />
+
 </menu>
