--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,19 +12,26 @@
 
     <EditText
         android:id="@+id/add_task"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/todo_item"
         android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:typeface="serif"/>
 
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/add_button"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/add_task"
-        android:textAlignment="center">
-    </ListView>
+        android:layout_width="wrap_content"
+        android:text="Add Task"
+        android:typeface="serif"
+        android:layout_toRightOf="@+id/add_task"
+        android:layout_marginLeft="65dp"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/taskfrag_container">
+    </RelativeLayout>
 
 </RelativeLayout>
